testdata/de/dm/intellij/liferay/language/jsp/LiferayTaglibDeprecationInspectionTest/button-item.jsp
<%@ taglib uri="http://liferay.com/tld/aui" prefix="aui" %>

<warning descr="Removed the aui:button-item Tag and replaced with aui:button. (see LPS-62922)"><aui:<error descr="Cannot resolve symbol 'aui:button-item'">button-item</error> /></warning>
